--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "node-desafio2-novo",
+  "name": "nodejs-desafio2-novo",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/osvaldokalvaitir/node-desafio2-novo.git",
+  "repository": "https://github.com/osvaldokalvaitir/nodejs-desafio2-novo.git",
   "author": "Osvaldo Kalvaitir Filho <osvaldokalvaitir@outlook.com>",
   "license": "MIT",
   "scripts": {
